    engine is automatically configured to emulate a specific real hardware CPU,
    including exact CPUID matching reference hardware. Check .bochsrc example
    or read docs for list of supported configurations or more details.
  * It is also possible to choose the CPU to emulate from Bochs command line
    using new command line parameter -cpu <cpu_name>.
  - Implemented Supervisor Mode Execution Protection (SMEP), the feature can
    be enabled using .bochsrc CPUID option.
  - Added support for XSAVEOPT instruction, the instruction can be enabled
    using .bochsrc CPUID option.
  - Added support for AVX instruction set emulation, to enable configure with
        --enable-avx option.
    When compiled in, AVX still has to be enabled using .bochsrc CPUID option.
  - Added emulation of AVX float16 convert instructions, the feature can be
    enabled using .bochsrc CPUID option.
  - Implemented VMX preemption timer VMEXIT control (patch by Jianan Hao)
  - Implemented Pause-Loop Exiting Secondary VMEXIT control
  - Redefined/Updated/Fixed instrumentation callbacks.
  - Bugfixes for CPU emulation correctness and stability.

- Memory
  - Added new configure option which enables RAM file backing for large guest
    memory with a smaller amount host memory, without causing a panic when
    host memory is exhausted (patch by Gary Cameron). To enable configure with
        --enable-large-ramfile option.

- Configure and compile
  - Fixed Bochs manifest for Win64 compilation using Microsoft Visual Studio
    command line compiler.
  - Added ability to configure CPUID family through .bochsrc.
    The default family value determined by configure option --enable-cpu-level.
  - Added ability to configure CPUID model through .bochsrc.
    The default model value is 3.
  - Added ability to configure x2apic support through .bochsrc.
    The APIC configuration could be selected using new CPUID .bochsrc APIC option.
    Possible configurations are: "legacy", "xapic" and "x2apic".