@@ -942,6 +942,22 @@ AC_ARG_ENABLE(fast-function-calls,
     ]
   )
 
+AC_MSG_CHECKING(for handlers chaining speedups)
+AC_ARG_ENABLE(handlers-chaining-speedups,
+  [  --enable-handlers-chaining        support handlers-chaining emulation speedups],
+  [if test "$enableval" = yes; then
+    AC_MSG_RESULT(yes)
+    speedup_handlers_chaining=1
+   else
+    AC_MSG_RESULT(no)
+    speedup_handlers_chaining=0
+   fi],
+  [
+    AC_MSG_RESULT(no)
+    speedup_handlers_chaining=0
+    ]
+  )
+
 AC_MSG_CHECKING(support for configurable MSR registers)
 AC_ARG_ENABLE(configurable-msrs,
   [  --enable-configurable-msrs        support for configurable MSR registers],
@@ -1116,18 +1132,35 @@ if test "$speedups_all" = 1; then
   # Configure requested to force all options enabled.
   speedup_repeat=1
   speedup_fastcall=1
+  speedup_handlers_chaining=1
 fi
 
 if test "$speedup_repeat" = 1; then
-  AC_DEFINE(BX_SupportRepeatSpeedups, 1)
+  AC_DEFINE(BX_SUPPORT_REPEAT_SPEEDUPS, 1)
 else
-  AC_DEFINE(BX_SupportRepeatSpeedups, 0)
+  AC_DEFINE(BX_SUPPORT_REPEAT_SPEEDUPS, 0)
 fi
 
 if test "$speedup_fastcall" = 1; then
   AC_DEFINE(BX_FAST_FUNC_CALL, 1)
 else
   AC_DEFINE(BX_FAST_FUNC_CALL, 0)
+fi
+
+if test "$use_smp" = 1; then
+  echo "ERROR: with >1 processor handlers-chaining speedups are not supported yet"
+  exit 1
+fi
+
+if test "$bx_debugger" = 1; then
+  echo "ERROR: handlers-chaining speedups are not supported with internal debugger yet"
+  exit 1
+fi
+
+if test "$speedup_handlers_chaining" = 1; then
+  AC_DEFINE(BX_SUPPORT_HANDLERS_CHAINING_SPEEDUPS, 1)
+else
+  AC_DEFINE(BX_SUPPORT_HANDLERS_CHAINING_SPEEDUPS, 0)
 fi
 
 
